--- a/dwm.1
+++ b/dwm.1
@@ -164,7 +164,13 @@ Resize focused window while dragging. Tiled windows will be toggled to the float
 .SH CUSTOMIZATION
 dwm is customized by creating a custom config.h and (re)compiling the source
 code. This keeps it fast, secure and simple.
-.SH SEE ALSO
+.SH SIGNALS
+.TP
+.B SIGHUP - 1
+Restart the dwm process.
+.TP
+.B SIGTERM - 15
+Cleanly terminate the dwm process..SH SEE ALSO
 .BR dmenu (1),
 .BR st (1)
 .SH ISSUES
